# a2_coursework

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
docs/: conf.py  index.rst  module_1.rst  module_2.rst
medical_imaging/: module_1.py  module_2.py
report/: report.aux  report.fdb_latexmk  report.fls  report.out  report.tex
scripts/: docker-start.sh
tests/: test_module_1.py  test_module_2.py
