[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "medical_imaging"
version = "0.1.0"
description = "Data Science in Medical Imaging (A2) Coursework."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Emilia Zabrzanska", email = "eaz21@cam.ac.uk" },]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "scikit-image>=0.21",
    "pywavelets>=1.4",
    "opencv-python>=4.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "flake8>=6.0",
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.3",
]

[project.urls]
"Source" = "https://gitlab.developers.cam.ac.uk/phy/data-intensive-science-mphil/assessments/a2_coursework/eaz21"

[tool.setuptools.packages.find]
where = ["."]
include = ["medical_imaging*"]

